--- a/package.json
+++ b/package.json
@@ -7,13 +7,23 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^2.7.2"
+    "path-browserify": "^1.0.1",
+    "rollup-plugin-polyfill-node": "^0.13.0",
+    "vite": "^7.0.0",
+    "vite-plugin-node-polyfills": "^0.23.0"
   },
   "dependencies": {
     "@deck.gl/core": "^8.9.30",
     "@loaders.gl/3d-tiles": "^3.4.14",
     "@loaders.gl/core": "^3.4.14",
     "@loaders.gl/tiles": "^3.4.14",
+    "buffer": "^6.0.3",
+    "debug": "^4.4.1",
+    "file-saver": "^2.0.5",
+    "minecraft-data": "^3.91.0",
+    "prismarine-nbt": "^2.7.0",
+    "prismarine-schematic": "^1.2.3",
+    "process": "^0.11.10",
     "three": "^0.177.0"
   }
 }
