Initial map, LOD bug

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vite-plugin-node-polyfills": "^0.23.0"
   },
   "dependencies": {
+    "3d-tiles-renderer": "^0.4.11",
     "@deck.gl/core": "^8.9.30",
     "@loaders.gl/3d-tiles": "^3.4.14",
     "@loaders.gl/core": "^3.4.14",
